kubernetes/aks/apps/librechat/base/librechat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librechat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librechat
  template:
    metadata:
      labels:
        app: librechat
    spec:
      containers:
        - name: librechat
          image: ghcr.io/danny-avila/librechat:latest
          ports:
            - name: http
              containerPort: 3080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 5
            httpGet:
              path: /health
              port: 3080
          readinessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 3
            httpGet:
              path: /ready
              port: 3080
          resources:
            requests:
              cpu: "2000m"
              memory: "4Gi"
            limits:
              cpu: "2000m"
              memory: "6Gi"
          volumeMounts:
            - name: config-yaml
              mountPath: "/app/librechat.yaml"
              subPath: "librechat.yaml"
              readOnly: true
            - name: image-volume
              mountPath: "/app/client/public/images"
      volumes:
        - name: config-yaml
          persistentVolumeClaim:
            claimName: librechat-pvc
        - name: image-volume
          persistentVolumeClaim:
            claimName: librechat-images-pvc
