kubernetes/aks/apps/librechat/base/librechat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: librechat
spec:
  type: ClusterIP
  selector:
    app: librechat
  ports:
    - port: 3080
      name: http
