kubernetes/aks/apps/librechat/base/millisearch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
spec:
  selector:
    matchLabels:
      app: meilisearch
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.azure.com/role
                    operator: In
                    values:
                      - agent
      containers:
        - name: chat-meilisearch
          image: getmeili/meilisearch:v1.7.3
          imagePullPolicy: Always
          ports:
            - containerPort: 7700
          volumeMounts:
            - name: storage
              mountPath: /meili_data
          resources:
            requests:
              cpu: "4"
              memory: 8Gi
            limits:
              cpu: "4"
              memory: 8Gi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 3000
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: librechat-meilisearch-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
spec:
  clusterIP: None
  selector:
    app: meilisearch
  ports:
    - port: 7700
      targetPort: 7700
