kubernetes/aks/apps/librechat/base/pgvector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vectordb
spec:
  selector:
    matchLabels:
      app: vectordb
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: vectordb
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - agent
      containers:
        - name: vectordb
          image: ankane/pgvector:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
            - name: run
              mountPath: /var/run/postgresql
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 100m
              memory: 4Gi
            limits:
              cpu: 500m
              memory: 6Gi
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: librechat-vectordb-pvc
        - name: tmp
          emptyDir: {}
        - name: run
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: vectordb
spec:
  type: ClusterIP
  selector:
    app: vectordb
  ports:
    - port: 5432
      name: http
